--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Hospital Re-admission Rates</title>
     <meta charset="utf-8">
     <meta name="author" content="Joshua Goldberg  Big Data Platforms Master of Science in Data Science Winter 2019" />
-    <link href="libs/remark-css/my_theme.css" rel="stylesheet" />
-    <link href="libs/remark-css/robot-fonts.css" rel="stylesheet" />
+    <link href="slide-folder/libs/remark-css/my_theme.css" rel="stylesheet" />
+    <link href="slide-folder/libs/remark-css/robot-fonts.css" rel="stylesheet" />
   </head>
   <body>
     <textarea id="source">
@@ -195,7 +195,7 @@ class: last-slide, center
 
 &lt;h1 style="text-align: left;"&gt; Architecture Diagram&lt;/h1&gt;
 
-![](Copy of Big Data Architecture.svg)
+![](slide-folder/Copy of Big Data Architecture.svg)
     </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
