--- a/slide-folder/assignment_1.html
+++ b/slide-folder/assignment_1.html
@@ -199,6 +199,7 @@ class: last-slide, center
     </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
+"ratio": "16:9",
 "highlightStyle": "github",
 "highlightLines": true,
 "countIncrementalSlides": false
