Changed aspect ratio.

--- a/slide-folder/assignment_1.html
+++ b/slide-folder/assignment_1.html
@@ -89,11 +89,11 @@ class: text-slide
 
 # Analytical Solution
 
-Several models will be deployed that provide probabilistic outcomes for patients around readmission, follow-up, and optimal patient care:
+Several models will be deployed that provide probabilistic outcomes for patients around re-admission, follow-up, and optimal patient care:
 
 --
 
-* A prediction score for patient readmission prior to admission
+* A prediction score for patient re-admission prior to admission
 --
 
 * A prediction score for readmission as patient receives care at the hospital
@@ -199,7 +199,6 @@ class: last-slide, center
     </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
-"ratio": "16:9",
 "highlightStyle": "github",
 "highlightLines": true,
 "countIncrementalSlides": false
