--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@ class: text-slide
 
 # Analytical Solution
 
-Several models will be deployed that provide probabilistic outcomes for patients around readmission, follow-up, and optimal patient care:
+Several models will be deployed that provide probabilistic outcomes for patients around re-admission, follow-up, and optimal patient care:
 
 --
 
-* A prediction score for patient readmission prior to admission
+* A prediction score for patient re-admission prior to admission
 --
 
 * A prediction score for readmission as patient receives care at the hospital
@@ -114,7 +114,7 @@ Analytics would be performed at numerous points in time, including patient entry
 
 class: text-slide
 
-# Big Data Technology 
+# Big Data Technology
 
 Data Storage format and compression technique
 * ORC stores collections of rows in one file and within the collection the row data is stored in a columnar format. This allows parallel processing of row collections across a cluster.  It uses specific encoders for different column data types to improve compression further.
@@ -129,10 +129,10 @@ Database and Query Execution Engine
 
 class: text-slide
 
-# Big Data Technology 
+# Big Data Technology
 
 Analytics and Data Science Platform
-* Apache spark can be used for machine learning and analytics – powerful unified engine, machine language are supported, Apache Spark is one of the most actively developed open source platforms 
+* Apache spark can be used for machine learning and analytics – powerful unified engine, machine language are supported, Apache Spark is one of the most actively developed open source platforms
 
 --
 
@@ -170,7 +170,7 @@ name: cluster-node
 * R: Replication factor. Usually 3 in a production cluster.
 * C: Compression ratio. When no compression is used, `\(C=1\)`.
 * S: Initial size of data that needs to be moved to HDFS.
-* G: Data growth factor 
+* G: Data growth factor
 * T: Temporary Space; Usually 10-25% of working space
 * d: size of each data node
 
@@ -181,7 +181,7 @@ name: cost
 
 # Monthly Cost on Average
 
-* Hardware cost (7x per node cost): `\(63,000\)` 
+* Hardware cost (7x per node cost): `\(63,000\)`
 * Software cost (7x per node cost): `\(28,000\)`
 * Environment, Power, Cooling, etc: `\(31,000\)`
 * Full time employees (1x): `\(110,000\)`
@@ -195,11 +195,10 @@ class: last-slide, center
 
 &lt;h1 style="text-align: left;"&gt; Architecture Diagram&lt;/h1&gt;
 
-![](Copy of Big Data Architecture.svg)
+![](slide-folder/Copy of Big Data Architecture.svg)
     </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
-"ratio": "16:9",
 "highlightStyle": "github",
 "highlightLines": true,
 "countIncrementalSlides": false
