Figured out PDF conversion with decktape. Requires node.js dependency, but it works.

--- a/slide-content/assignment_1.html
+++ b/slide-content/assignment_1.html
@@ -20,6 +20,8 @@ class: left, middle, inverse, title-slide
 
 
 
+
+
 class: text-slide, main-slide, center, middle
 
 # Problem Statement
@@ -195,7 +197,7 @@ class: last-slide, center
 
 &lt;h1 style="text-align: left;"&gt; Architecture Diagram&lt;/h1&gt;
 
-![](Copy of Big Data Architecture.svg)
+![](big-data-architecture.svg)
     </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
