--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ class: left, middle, inverse, title-slide
 
 
 
+
+
 class: text-slide, main-slide, center, middle
 
 # Problem Statement
@@ -114,7 +116,7 @@ Analytics would be performed at numerous points in time, including patient entry
 
 class: text-slide
 
-# Big Data Technology
+# Big Data Technology 
 
 Data Storage format and compression technique
 * ORC stores collections of rows in one file and within the collection the row data is stored in a columnar format. This allows parallel processing of row collections across a cluster.  It uses specific encoders for different column data types to improve compression further.
@@ -129,10 +131,10 @@ Database and Query Execution Engine
 
 class: text-slide
 
-# Big Data Technology
+# Big Data Technology 
 
 Analytics and Data Science Platform
-* Apache spark can be used for machine learning and analytics – powerful unified engine, machine language are supported, Apache Spark is one of the most actively developed open source platforms
+* Apache spark can be used for machine learning and analytics – powerful unified engine, machine language are supported, Apache Spark is one of the most actively developed open source platforms 
 
 --
 
@@ -170,7 +172,7 @@ name: cluster-node
 * R: Replication factor. Usually 3 in a production cluster.
 * C: Compression ratio. When no compression is used, `\(C=1\)`.
 * S: Initial size of data that needs to be moved to HDFS.
-* G: Data growth factor
+* G: Data growth factor 
 * T: Temporary Space; Usually 10-25% of working space
 * d: size of each data node
 
@@ -181,7 +183,7 @@ name: cost
 
 # Monthly Cost on Average
 
-* Hardware cost (7x per node cost): `\(63,000\)`
+* Hardware cost (7x per node cost): `\(63,000\)` 
 * Software cost (7x per node cost): `\(28,000\)`
 * Environment, Power, Cooling, etc: `\(31,000\)`
 * Full time employees (1x): `\(110,000\)`
@@ -195,7 +197,7 @@ class: last-slide, center
 
 &lt;h1 style="text-align: left;"&gt; Architecture Diagram&lt;/h1&gt;
 
-![](slide-content/Copy of Big Data Architecture.svg)
+![](slide-content/big-data-architecture.svg)
     </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
