--- a/slide-content/assignment_1.html
+++ b/slide-content/assignment_1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hospital Re-admission Rates</title>
+    <title>Hospital Readmission Rates</title>
     <meta charset="utf-8">
     <meta name="author" content="Joshua Goldberg  Big Data Platforms Master of Science in Data Science Winter 2019" />
     <link href="libs/remark-css/my_theme.css" rel="stylesheet" />
@@ -11,7 +11,7 @@
     <textarea id="source">
 class: left, middle, inverse, title-slide
 
-# Hospital Re-admission Rates
+# Hospital Readmission Rates
 ## Solving Patient Needs with Big Data and Machine Learning
 ### Joshua Goldberg <br><span style="font-size: 50%;">Big Data Platforms<br>Master of Science in Data Science<br>Winter 2019</span>
 
@@ -91,11 +91,11 @@ class: text-slide
 
 # Analytical Solution
 
-Several models will be deployed that provide probabilistic outcomes for patients around re-admission, follow-up, and optimal patient care:
+Several models will be deployed that provide probabilistic outcomes for patients around readmission, follow-up, and optimal patient care:
 
 --
 
-* A prediction score for patient re-admission prior to admission
+* A prediction score for patient readmission prior to admission
 --
 
 * A prediction score for readmission as patient receives care at the hospital
