--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Joshua Goldberg  Big Data Platforms Master of Science in Data Science Winter 2019" />
     <link href="libs/remark-css/robot-fonts.css" rel="stylesheet" />
-    <link rel="stylesheet" href="uchicago.css" type="text/css" />
+    <link rel="stylesheet" href="slide-content/uchicago.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
