--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Hospital Readmission Rates</title>
     <meta charset="utf-8">
     <meta name="author" content="Joshua Goldberg  Big Data Platforms Master of Science in Data Science Winter 2019" />
-    <link href="libs/remark-css/robot-fonts.css" rel="stylesheet" />
+    <link href="slide-content/libs/remark-css/robot-fonts.css" rel="stylesheet" />
     <link rel="stylesheet" href="slide-content/uchicago.css" type="text/css" />
   </head>
   <body>
@@ -197,7 +197,7 @@ class: last-slide, center
 
 &lt;h1 style="text-align: left;"&gt; Architecture Diagram&lt;/h1&gt;
 
-![](big-data-architecture.svg)
+![](slide-content/big-data-architecture.svg)
     </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
